--- a/index.html
+++ b/index.html
@@ -1,207 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Pioneering Adventures, Crafting Dreams - AvantQuest Roblox Development Group">
-  <title>AvantQuest - Home</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <!-- FontAwesome Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <style>
-    /* General Styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: 'Poppins', sans-serif;
-      line-height: 1.6;
-      background-color: #111;
-      color: #ddd;
-    }
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-    ul {
-      list-style: none;
-    }
-
-    /* Navigation Bar */
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      background: linear-gradient(135deg, #1f1f1f, #333);
-      color: #fff;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    }
-    .navbar .logo {
-      font-size: 1.8rem;
-      font-weight: 700;
-      color: #f0c040;
-    }
-    .nav-links {
-      display: flex;
-      gap: 1.5rem;
-    }
-    .nav-links a {
-      color: #fff;
-      transition: color 0.3s ease;
-    }
-    .nav-links a:hover {
-      color: #f0c040;
-    }
-
-    /* Hero Section */
-    #hero {
-      height: 100vh;
-      background: url('images/hero-bg.jpg') no-repeat center center/cover;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      color: #fff;
-      position: relative;
-      overflow: hidden;
-    }
-    #hero::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-    }
-    #hero .hero-content {
-      z-index: 2;
-    }
-    #hero h1 {
-      font-size: 4rem;
-      font-weight: 700;
-      margin-bottom: 1rem;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-    }
-    #hero p {
-      font-size: 1.5rem;
-      margin-bottom: 2rem;
-    }
-    .btn-primary, .btn-secondary {
-      display: inline-block;
-      padding: 0.8rem 2rem;
-      margin: 0.5rem;
-      border-radius: 25px;
-      font-weight: 600;
-      transition: transform 0.3s ease, background 0.3s ease;
-    }
-    .btn-primary {
-      background: #f0c040;
-      color: #333;
-    }
-    .btn-primary:hover {
-      background: #e0a930;
-      transform: translateY(-5px);
-    }
-    .btn-secondary {
-      background: transparent;
-      border: 2px solid #f0c040;
-      color: #f0c040;
-    }
-    .btn-secondary:hover {
-      background: #f0c040;
-      color: #333;
-      transform: translateY(-5px);
-    }
-
-    /* Section Styles */
-    section {
-      padding: 4rem 2rem;
-      text-align: center;
-    }
-    h2 {
-      font-size: 2.8rem;
-      font-weight: 700;
-      margin-bottom: 2rem;
-      color: #f0c040;
-    }
-    p {
-      font-size: 1.2rem;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-
-    /* Animated Section Background */
-    .section-dark {
-      background: linear-gradient(135deg, #1f1f1f, #222);
-      color: #fff;
-    }
-
-    /* Footer */
-    footer {
-      background: #111;
-      color: #fff;
-      text-align: center;
-      padding: 1rem 0;
-      box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.3);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AvantQuest - Roblox Development Group</title>
+    <!-- Links for CSS, Fonts, and JavaScript -->
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
-  <!-- Navigation Bar -->
-  <header>
-    <nav class="navbar">
-      <a href="#" class="logo">AvantQuest</a>
-      <ul class="nav-links">
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#games">Our Games</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#community">Community</a></li>
-        <li><a href="#blog">Blog</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!-- Header Section -->
+    <header class="header">
+        <nav class="navbar">
+            <div class="logo">AvantQuest</div>
+            <ul class="nav-links">
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#games">Our Games</a></li>
+                <li><a href="#team">Team</a></li>
+                <li><a href="#community">Community</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#discord">Discord</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- Hero Section -->
-  <section id="hero">
-    <div class="hero-content">
-      <h1>Welcome to AvantQuest!</h1>
-      <p>Pioneering Adventures, Crafting Dreams on Roblox</p>
-      <a href="#games" class="btn-primary">Explore Our Games</a>
-      <a href="#community" class="btn-secondary">Join Our Community</a>
-    </div>
-  </section>
+    <!-- Hero Section -->
+    <section id="hero" class="hero">
+        <h1>Welcome to AvantQuest!</h1>
+        <p>Join us in creating unforgettable gaming experiences on Roblox.</p>
+        <a href="#games" class="btn">Explore Our Games</a>
+        <a href="#community" class="btn">Join Our Community</a>
+    </section>
 
-  <!-- About Us -->
-  <section id="about" class="section-dark">
-    <h2>About Us</h2>
-    <p>AvantQuest is a Roblox development group dedicated to creating immersive and unforgettable gaming experiences. We thrive on innovation, collaboration, and creativity to deliver quality games for the Roblox community.</p>
-  </section>
+    <!-- About Us Section -->
+    <section id="about" class="about">
+        <h2>About Us</h2>
+        <p>AvantQuest is committed to crafting immersive Roblox worlds and leading innovation in the metaverse.</p>
+    </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2024 AvantQuest. All rights reserved.</p>
-  </footer>
+    <!-- Our Games Section -->
+    <section id="games" class="games">
+        <h2>Our Games</h2>
+        <div class="game-gallery">
+            <div class="game-card">
+                <img src="game1.jpg" alt="Game 1">
+                <h3>Game Title 1</h3>
+            </div>
+            <div class="game-card">
+                <img src="game2.jpg" alt="Game 2">
+                <h3>Game Title 2</h3>
+            </div>
+            <div class="game-card">
+                <img src="game3.jpg" alt="Game 3">
+                <h3>Game Title 3</h3>
+            </div>
+        </div>
+    </section>
 
-  <!-- Smooth Scrolling JS -->
-  <script>
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-          behavior: 'smooth'
-        });
-      });
-    });
-  </script>
+    <!-- Community Section -->
+    <section id="community" class="community">
+        <h2>Community Posts</h2>
+        <div id="public-posts">
+            <p>Login to view and interact with public community posts.</p>
+        </div>
+    </section>
+
+    <!-- Login Section -->
+    <section id="login" class="login">
+        <h2>Staff Login</h2>
+        <form action="#" method="POST">
+            <input type="text" placeholder="Username" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit" class="btn">Login</button>
+        </form>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <p>Email us at: <a href="mailto:support@avantquest.com">support@avantquest.com</a></p>
+    </section>
+
+    <!-- Discord Section -->
+    <section id="discord" class="discord">
+        <h2>Join Our Discord Server</h2>
+        <a href="https://discord.gg/your-invite-link" target="_blank" class="btn">Join Discord</a>
+    </section>
+
+    <!-- Staff Dashboard (Protected) -->
+    <section id="dashboard" class="dashboard">
+        <h2>Staff Dashboard</h2>
+        <p>Only accessible for verified staff members.</p>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2024 AvantQuest. All rights reserved.</p>
+    </footer>
 </body>
 </html>
+
+<!-- Styles (CSS file content) -->
+/* Place in styles.css */
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background: url('background.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: #fff;
+}
+
+/* Header */
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+}
+
+.header .logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: white;
+}
+
+.nav-links li {
+    display: inline;
+    margin: 0 10px;
+}
+
+.nav-links a {
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+    transition: color 0.3s ease;
+}
+
+.nav-links a:hover {
+    color: #00d1ff;
+}
+
+/* Hero */
+.hero {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+.hero h1 {
+    font-size: 3rem;
+    margin: 0;
+}
+
+.hero p {
+    font-size: 1.2rem;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 10px;
+    color: white;
+    background-color: #00d1ff;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background 0.3s ease;
+}
+
+.btn:hover {
+    background: #007b9e;
+}
+
+/* Particle Animation Effect (JavaScript) */
+<script>
+const particles = [];
+const canvas = document.createElement('canvas');
+document.body.appendChild(canvas);
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+const ctx = canvas.getContext('2d');
+
+document.addEventListener('mousemove', (e) => {
+    const particle = { x: e.clientX, y: e.clientY, size: Math.random() * 5 + 1, opacity: 1 };
+    particles.push(particle);
+});
+
+function updateParticles() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    particles.forEach((particle, index) => {
+        particle.y -= 1;
+        particle.opacity -= 0.02;
+        if (particle.opacity <= 0) particles.splice(index, 1);
+        else {
+            ctx.fillStyle = `rgba(255, 255, 255, ${particle.opacity})`;
+            ctx.beginPath();
+            ctx.arc(particle.x, particle.y, particle.size, 0, Math.PI * 2);
+            ctx.fill();
+        }
+    });
+    requestAnimationFrame(updateParticles);
+}
+updateParticles();
+</script>
