--- a/index.html
+++ b/index.html
@@ -7,8 +7,137 @@
     <!-- Links for CSS, Fonts, and JavaScript -->
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
+    <style>
+        /* General Styles */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #fff;
+            overflow-x: hidden;
+        }
+
+        /* Header */
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background: rgba(0, 0, 0, 0.8);
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        .header .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: white;
+        }
+
+        .nav-links li {
+            display: inline;
+            margin: 0 10px;
+        }
+
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            font-size: 1rem;
+            transition: color 0.3s ease;
+        }
+
+        .nav-links a:hover {
+            color: #00d1ff;
+        }
+
+        /* Hero */
+        .hero {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.7);
+        }
+
+        .hero h1 {
+            font-size: 3rem;
+            margin: 0;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 10px;
+            color: white;
+            background-color: #00d1ff;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: background 0.3s ease;
+        }
+
+        .btn:hover {
+            background: #007b9e;
+        }
+
+        /* Sections */
+        section {
+            padding: 50px 20px;
+            text-align: center;
+        }
+
+        /* Login */
+        .login form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .login input {
+            padding: 10px;
+            margin: 10px;
+            width: 200px;
+            border: none;
+            border-radius: 5px;
+        }
+
+        .login button {
+            padding: 10px 20px;
+            background-color: #00d1ff;
+            border: none;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        .login button:hover {
+            background: #007b9e;
+        }
+
+        /* Particle Canvas */
+        #particle-canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
+    <!-- Particle Canvas -->
+    <canvas id="particle-canvas"></canvas>
+
     <!-- Header Section -->
     <header class="header">
         <nav class="navbar">
@@ -38,47 +167,26 @@
         <p>AvantQuest is committed to crafting immersive Roblox worlds and leading innovation in the metaverse.</p>
     </section>
 
-    <!-- Our Games Section -->
-    <section id="games" class="games">
-        <h2>Our Games</h2>
-        <div class="game-gallery">
-            <div class="game-card">
-                <img src="game1.jpg" alt="Game 1">
-                <h3>Game Title 1</h3>
-            </div>
-            <div class="game-card">
-                <img src="game2.jpg" alt="Game 2">
-                <h3>Game Title 2</h3>
-            </div>
-            <div class="game-card">
-                <img src="game3.jpg" alt="Game 3">
-                <h3>Game Title 3</h3>
-            </div>
-        </div>
-    </section>
-
-    <!-- Community Section -->
-    <section id="community" class="community">
-        <h2>Community Posts</h2>
-        <div id="public-posts">
-            <p>Login to view and interact with public community posts.</p>
-        </div>
-    </section>
-
     <!-- Login Section -->
     <section id="login" class="login">
         <h2>Staff Login</h2>
-        <form action="#" method="POST">
+        <form id="login-form" action="#dashboard" method="POST">
             <input type="text" placeholder="Username" required>
             <input type="password" placeholder="Password" required>
-            <button type="submit" class="btn">Login</button>
+            <button type="submit">Login</button>
         </form>
+    </section>
+
+    <!-- Staff Dashboard Placeholder -->
+    <section id="dashboard" class="dashboard" style="display: none;">
+        <h2>Staff Dashboard</h2>
+        <p>Welcome to the staff dashboard! This is accessible only for verified members.</p>
     </section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <h2>Contact Us</h2>
-        <p>Email us at: <a href="mailto:support@avantquest.com">support@avantquest.com</a></p>
+        <p>Email us at: <a href="mailto:malindiboys@gmail.com">malindiboys@gmail.com</a></p>
     </section>
 
     <!-- Discord Section -->
@@ -87,127 +195,56 @@
         <a href="https://discord.gg/your-invite-link" target="_blank" class="btn">Join Discord</a>
     </section>
 
-    <!-- Staff Dashboard (Protected) -->
-    <section id="dashboard" class="dashboard">
-        <h2>Staff Dashboard</h2>
-        <p>Only accessible for verified staff members.</p>
-    </section>
-
     <!-- Footer -->
     <footer class="footer">
         <p>&copy; 2024 AvantQuest. All rights reserved.</p>
     </footer>
+
+    <!-- JavaScript -->
+    <script>
+        // Particle Effect
+        const canvas = document.getElementById('particle-canvas');
+        const ctx = canvas.getContext('2d');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+
+        const particles = [];
+
+        document.addEventListener('mousemove', (e) => {
+            particles.push({
+                x: e.clientX,
+                y: e.clientY,
+                size: Math.random() * 5 + 2,
+                opacity: 1,
+            });
+        });
+
+        function updateParticles() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            for (let i = 0; i < particles.length; i++) {
+                const p = particles[i];
+                p.y -= 1;
+                p.opacity -= 0.01;
+                if (p.opacity <= 0) {
+                    particles.splice(i, 1);
+                    i--;
+                } else {
+                    ctx.fillStyle = `rgba(255, 255, 255, ${p.opacity})`;
+                    ctx.beginPath();
+                    ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
+                    ctx.fill();
+                }
+            }
+            requestAnimationFrame(updateParticles);
+        }
+        updateParticles();
+
+        // Simple Login Simulation
+        document.getElementById('login-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            document.querySelector('#login').style.display = 'none';
+            document.querySelector('#dashboard').style.display = 'block';
+        });
+    </script>
 </body>
 </html>
-
-<!-- Styles (CSS file content) -->
-/* Place in styles.css */
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background: url('background.jpg') no-repeat center center fixed;
-    background-size: cover;
-    color: #fff;
-}
-
-/* Header */
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background: rgba(0, 0, 0, 0.8);
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
-}
-
-.header .logo {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: white;
-}
-
-.nav-links li {
-    display: inline;
-    margin: 0 10px;
-}
-
-.nav-links a {
-    color: white;
-    text-decoration: none;
-    font-size: 1rem;
-    transition: color 0.3s ease;
-}
-
-.nav-links a:hover {
-    color: #00d1ff;
-}
-
-/* Hero */
-.hero {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.7);
-}
-
-.hero h1 {
-    font-size: 3rem;
-    margin: 0;
-}
-
-.hero p {
-    font-size: 1.2rem;
-}
-
-.btn {
-    display: inline-block;
-    padding: 10px 20px;
-    margin: 10px;
-    color: white;
-    background-color: #00d1ff;
-    border-radius: 5px;
-    text-decoration: none;
-    transition: background 0.3s ease;
-}
-
-.btn:hover {
-    background: #007b9e;
-}
-
-/* Particle Animation Effect (JavaScript) */
-<script>
-const particles = [];
-const canvas = document.createElement('canvas');
-document.body.appendChild(canvas);
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-const ctx = canvas.getContext('2d');
-
-document.addEventListener('mousemove', (e) => {
-    const particle = { x: e.clientX, y: e.clientY, size: Math.random() * 5 + 1, opacity: 1 };
-    particles.push(particle);
-});
-
-function updateParticles() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    particles.forEach((particle, index) => {
-        particle.y -= 1;
-        particle.opacity -= 0.02;
-        if (particle.opacity <= 0) particles.splice(index, 1);
-        else {
-            ctx.fillStyle = `rgba(255, 255, 255, ${particle.opacity})`;
-            ctx.beginPath();
-            ctx.arc(particle.x, particle.y, particle.size, 0, Math.PI * 2);
-            ctx.fill();
-        }
-    });
-    requestAnimationFrame(updateParticles);
-}
-updateParticles();
-</script>
