--- a/index.html
+++ b/index.html
@@ -5,86 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AvantQuest - Roblox Development Group</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
-    <div id="particle-canvas"></div>
     <header class="main-header">
         <div class="logo">AvantQuest</div>
         <nav class="nav-bar">
-            <a href="#about" class="nav-link">About Us</a>
-            <a href="#community" class="nav-link">Community</a>
-            <a href="#contact" class="nav-link">Contact</a>
-            <a href="#staff-login" class="nav-link">Staff Login</a>
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="about.html" class="nav-link">About Us</a>
+            <a href="games.html" class="nav-link">Our Games</a>
+            <a href="community.html" class="nav-link">Community</a>
+            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="login.html" class="nav-link">Staff Login</a>
         </nav>
     </header>
 
     <main>
         <section id="hero">
-            <h1>Welcome to AvantQuest</h1>
-            <p>Your premier Roblox development team, creating innovative and engaging experiences.</p>
-        </section>
-
-        <section id="about" class="section about">
-            <h2>About AvantQuest</h2>
-            <p>AvantQuest is dedicated to bringing creativity and innovation to Roblox. Our team of developers and designers work collaboratively to produce outstanding content for the platform.</p>
-        </section>
-
-        <section id="community" class="section community">
-            <h2>Community Posts</h2>
-            <div id="community-posts">
-                <!-- Posts will dynamically load here -->
-            </div>
-            <button class="load-more">Load More</button>
-        </section>
-
-        <section id="contact" class="section contact">
-            <h2>Contact Us</h2>
-            <form action="mailto:malindiboys@gmail.com" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-
-                <button type="submit">Send</button>
-            </form>
-        </section>
-
-        <section id="discord" class="section discord">
-            <h2>Join Our Discord</h2>
-            <p>Stay connected with AvantQuest and be part of our community. <a href="https://discord.gg/your-server" target="_blank">Join now</a>.</p>
-        </section>
-
-        <section id="staff-login" class="section login">
-            <h2>Staff Login</h2>
-            <form action="/dashboard" method="POST">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-
-                <button type="submit">Login</button>
-            </form>
+            <h1>Welcome to AvantQuest!</h1>
+            <p>Join us in creating unforgettable gaming experiences on Roblox.</p>
+            <a href="games.html" class="btn">Explore Our Games</a>
+            <a href="community.html" class="btn">Join Our Community</a>
         </section>
     </main>
 
     <footer class="main-footer">
         <p>&copy; 2024 AvantQuest. All rights reserved.</p>
     </footer>
-
-    <div id="settings-modal" class="settings-modal">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <h2>Settings</h2>
-            <label>
-                <input type="checkbox" id="toggle-particles" checked> Enable Mouse Particles
-            </label>
-        </div>
-    </div>
 </body>
 </html>
