--- a/index.html
+++ b/index.html
@@ -4,32 +4,188 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AvantQuest - Roblox Development Group</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to right, #4e54c8, #8f94fb);
+            color: white;
+            overflow: hidden;
+        }
+
+        header {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            text-align: center;
+            position: relative;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        nav ul li a:hover {
+            color: #ffcc00; /* Change color on hover */
+        }
+
+        section {
+            padding: 20px;
+            margin: 20px;
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 10px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            background: rgba(0, 0, 0, 0.7);
+        }
+
+        #particle-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+
+        .particle {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 50%;
+            pointer-events: none;
+        }
+
+        #settings {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        #settings button {
+            background: #ffcc00;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+
+        #settings button:hover {
+            background: #ffd700;
+        }
+    </style>
 </head>
 <body>
-    <header class="main-header">
-        <div class="logo">AvantQuest</div>
-        <nav class="nav-bar">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="about.html" class="nav-link">About Us</a>
-            <a href="games.html" class="nav-link">Our Games</a>
-            <a href="community.html" class="nav-link">Community</a>
-            <a href="contact.html" class="nav-link">Contact</a>
-            <a href="login.html" class="nav-link">Staff Login</a>
+    <div id="particle-container"></div>
+
+    <header>
+        <h1>AvantQuest</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#community">Community</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#login">Staff Login</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
-        <section id="hero">
-            <h1>Welcome to AvantQuest!</h1>
-            <p>Join us in creating unforgettable gaming experiences on Roblox.</p>
-            <a href="games.html" class="btn">Explore Our Games</a>
-            <a href="community.html" class="btn">Join Our Community</a>
+        <section id="home">
+            <h2>Welcome to AvantQuest</h2>
+            <p>Your adventure in Roblox development starts here!</p>
+        </section>
+
+        <section id="about">
+            <h2>About Us</h2>
+            <p>We are a passionate group of Roblox developers dedicated to creating immersive experiences.</p>
+        </section>
+
+        <section id="projects">
+            <h2>Our Projects</h2>
+            <p>Check out our latest games on Roblox!</p>
+        </section>
+
+        <section id="community">
+            <h2>Community</h2>
+            <p>Join our Discord server!</p>
+            <a href="https://discord.gg/yourdiscordlink" style="color: #ffcc00;">Join Discord</a>
+            <div id="public-posts">
+                <h3>Public Posts</h3>
+                <p>Latest announcements...</p>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <form id="contact-form">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" required></textarea>
+                <button type="submit">Send</button>
+            </ form>
+        </section>
+
+        <section id="login">
+            <h2>Staff Login</h2>
+            <form id="login-form">
+                <input type="text" placeholder="Username" required>
+                <input type="password" placeholder="Password" required>
+                <button type="submit">Login</button>
+            </form>
         </section>
     </main>
 
-    <footer class="main-footer">
-        <p>&copy; 2024 AvantQuest. All rights reserved.</p>
+    <footer>
+        <p>&copy; 2023 AvantQuest. All rights reserved.</p>
     </footer>
+
+    <script>
+        const particleContainer = document.getElementById('particle-container');
+
+        document.addEventListener('mousemove', (e) => {
+            const particle = document.createElement('div');
+            particle.className = 'particle';
+            particle.style.left = `${e.pageX}px`;
+            particle.style.top = `${e.pageY}px`;
+            particleContainer.appendChild(particle);
+
+            setTimeout(() => {
+                particle.remove();
+            }, 1000);
+        });
+
+        document.getElementById('contact-form').addEventListener('submit', (e) => {
+            e.preventDefault();
+            alert('Message sent!');
+            e.target.reset();
+        });
+
+        document.getElementById('login-form').addEventListener('submit', (e) => {
+            e.preventDefault();
+            alert('Login successful!');
+            e.target.reset();
+        });
+    </script>
 </body>
 </html>
