--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <section id="contact">
         <div class="content">
             <h3>Contact Us</h3>
-            <p>Have a project in mind? Reach out to us and let’s make it happen. Email us at <a href="mailto:malindiboys@gmail.com">contact@avantquest.com</a>.</p>
+            <p>Have a project in mind? Reach out to us and let’s make it happen. Email us at <a href="mailto:contact@avantquest.com">contact@avantquest.com</a>.</p>
         </div>
     </section>
 
