--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             position: relative;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
             padding: 20px;
+            margin: 40px auto;
+            max-width: 90%;
         }
 
         .hero h2 {
