--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>AvantQuest | Roblox Development Group</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
