--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
-            background: #f9f9f9;
-            color: #000;
+            background: #000;
+            color: #fff;
             overflow-x: hidden;
         }
 
@@ -64,45 +64,41 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.1);
             border-radius: 30px;
-            color: #000;
+            color: #fff;
             position: relative;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
             padding: 20px;
             margin: 40px auto;
             max-width: 90%;
-            animation: floatIn 2s ease-in-out;
         }
 
         .hero h2 {
             font-size: 3rem;
             margin-bottom: 10px;
-            color: #000;
         }
 
         .hero h2 span {
             display: inline-block;
-            animation: floatLetter 2s ease-in-out infinite, shine 2s linear infinite;
-            position: relative;
+            animation: floatLetter 2s ease-in-out;
+            animation-fill-mode: forwards;
         }
 
         .hero p {
             font-size: 1.2rem;
             max-width: 800px;
             margin: 0 auto;
-            color: #000;
         }
 
         .clock {
             position: absolute;
             top: 20px;
-            background: rgba(0, 0, 0, 0.7);
-            color: #fff;
+            background: rgba(255, 255, 255, 0.7);
+            color: #000;
             padding: 10px 20px;
             border-radius: 30px;
             font-size: 2rem;
-            animation: slideDown 1s ease-in-out;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
@@ -114,11 +110,6 @@
             margin: 40px auto;
             max-width: 800px;
             text-align: left;
-            animation: slideIn 1.5s ease-in-out;
-        }
-
-        .semi-circle {
-            display: none;
         }
 
         footer {
@@ -129,41 +120,9 @@
             color: #aaa;
         }
 
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-
-        @keyframes slideIn {
+        @keyframes floatLetter {
             0% { transform: translateY(50px); opacity: 0; }
             100% { transform: translateY(0); opacity: 1; }
-        }
-
-        @keyframes slideDown {
-            0% { transform: translateY(-50px); opacity: 0; }
-            100% { transform: translateY(0); opacity: 1; }
-        }
-
-        @keyframes floatIn {
-            0% { transform: translateY(-30px); opacity: 0; }
-            100% { transform: translateY(0); opacity: 1; }
-        }
-
-        @keyframes floatLetter {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
-        }
-
-        @keyframes shine {
-            0% { background-position: -100px; }
-            100% { background-position: 300px; }
-        }
-
-        .hero h2 span {
-            background: linear-gradient(90deg, #ffffff, #ff66cc, #ffffff);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-size: 200%;
         }
 
         @media (max-width: 768px) {
@@ -206,6 +165,13 @@
                 }
             });
         });
+
+        window.onload = () => {
+            const spans = document.querySelectorAll('.hero h2 span');
+            spans.forEach((span, index) => {
+                span.style.animationDelay = `${index * 0.1}s`;
+            });
+        };
     </script>
 </head>
 <body>
